--- a/final-project/src/components/styles/PageHeader.css
+++ b/final-project/src/components/styles/PageHeader.css
@@ -7,6 +7,7 @@
     flex-direction: row;
     padding: 5px;
     justify-content: space-between;
+    border: 1px solid black;
 }
 
 .header-nav{
@@ -15,6 +16,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding-right: 15px;
+    border: 1px solid purple;
 }
 
 .logo {
@@ -33,15 +35,15 @@
   }
 
 .sort-box{
-    border: 3px solid;
+    border: 3px solid black;
 }
 
 .search-bar{
-    border: 3px solid;
+    border: 3px solid black;
 }
 
 .cart{
-    border: 3px solid;
+    border: 3px solid black;
 }
 
 
