--- a/final-project/src/components/styles/PageHeader.css
+++ b/final-project/src/components/styles/PageHeader.css
@@ -1,5 +1,6 @@
 
 .header {
+    width: 100%;
     
     color: white;
     text-align: center;
@@ -11,7 +12,7 @@
 }
 
 .header-nav{
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -19,7 +20,13 @@
     border: 1px solid purple;
 }
 
+.search-bar{
+  display: flex;
+  flex-direction: column;
+}
+
 .logo {
+    background-image:url(/final-project/src/images/Logo.png) ;
     height: 6em;
     padding: 1.5em;
     will-change: filter;
