--- a/final-project/src/App.css
+++ b/final-project/src/App.css
@@ -1,6 +1,10 @@
-#root {
-  width: 100%;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Full viewport height */
+}
+
+.App-content {
+  flex: 1;
+  border: 1px solid orangered;
 }
