--- a/final-project/src/components/styles/PageHeader.css
+++ b/final-project/src/components/styles/PageHeader.css
@@ -7,44 +7,26 @@
     flex-direction: row;
     padding: 5px;
     justify-content: space-between;
-    border: 1px solid black;
-}
-
-.header-nav{
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-right: 15px;
-    border: 1px solid purple;
+    align-items: center;
+    background-color: rgb(34, 21, 51);
 }
 
 .logo {
-    height: 6em;
+    height: 10em;
     padding: 1.5em;
     will-change: filter;
     transition: filter 300ms;
     position: relative;
     left: auto;
   }
+
   .logo:hover {
     filter: drop-shadow(0 0 2em #646cffaa);
   }
+
   .logo.react:hover {
     filter: drop-shadow(0 0 2em #61dafbaa);
   }
-
-.sort-box{
-    border: 3px solid black;
-}
-
-.search-bar{
-    border: 3px solid black;
-}
-
-.cart{
-    border: 3px solid black;
-}
 
 
 
