--- a/final-project/src/components/styles/Home.css
+++ b/final-project/src/components/styles/Home.css
@@ -1,5 +1,9 @@
+
+
 .main-content {
-    flex: 1;
     border: 1px solid orangered;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
