--- a/final-project/src/components/styles/Content-Window.css
+++ b/final-project/src/components/styles/Content-Window.css
@@ -1,7 +1,12 @@
 
 .content-body {
-    margin-bottom: 20px;
-    border: 1px solid blueviolet;
+    margin-bottom: 10px;
+    border: 1px solid rgb(80, 190, 233);;
+    border-radius: 10px;
+    
+    padding: 20px;
+    margin: 10px;
+    background-color: rgb(80, 190, 233);
 }
 
 
