--- a/final-project/src/components/styles/Home.css
+++ b/final-project/src/components/styles/Home.css
@@ -1,7 +1,7 @@
 
 
 .main-content {
-    border: 1px solid orangered;
+    /* border: 1px solid hsl(16, 100%, 50%); */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
