--- a/final-project/src/components/styles/PageHeader.css
+++ b/final-project/src/components/styles/PageHeader.css
@@ -1,7 +1,6 @@
 
 .header {
     width: 100%;
-    
     color: white;
     text-align: center;
     display: flex;
@@ -15,7 +14,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     padding-right: 15px;
     border: 1px solid purple;
     align-items: center;
@@ -30,6 +29,10 @@
 a {
   color: rgb(252, 74, 142);
   text-decoration: none;
+}
+
+.links {
+  display: none;
 }
 
 .hamburger {
