--- a/final-project/src/components/styles/PageHeader.css
+++ b/final-project/src/components/styles/PageHeader.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     padding: 5px;
     justify-content: space-between;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .header-nav{
@@ -16,7 +16,7 @@
     flex-direction: row;
     justify-content: space-around;
     padding-right: 15px;
-    border: 1px solid purple;
+    /* border: 1px solid purple; */
     align-items: center;
     background-color: rgba(34, 21, 51, 0.8);
 }
