--- a/final-project/src/components/styles/Streamer-Content.css
+++ b/final-project/src/components/styles/Streamer-Content.css
@@ -1,3 +1,37 @@
 
+@media only screen and (max-width: 700px) {  /* This is the MOBILE version */
+
+    .main-content {
+        /* border: 1px solid hsl(16, 100%, 50%); */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+      }
+
+      .content-body{
+        width: fit-content;
+      }
+
+
+
+    }
+    
+    @media only screen and (min-width: 701px) {  /* This is the MOBILE version */
+        .main-content {
+            /* border: 1px solid hsl(16, 100%, 50%); */
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            
+          }
+        .content-body{
+            width: fit-content;
+        }
+    }
+
+
+
 
 
