--- a/final-project/src/components/styles/Content-Window.css
+++ b/final-project/src/components/styles/Content-Window.css
@@ -1,11 +1,11 @@
 
 .content-body {
     margin-bottom: 10px;
-    border: 1px solid rgb(80, 190, 233);;
+    border: 1px solid rgb(80, 190, 233);
     border-radius: 10px;
     padding: 20px;
     margin: 10px;
-    background-color: rgb(80, 190, 233);
+    background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
 }
 
 
