--- a/final-project/src/components/styles/PageHeader.css
+++ b/final-project/src/components/styles/PageHeader.css
@@ -25,14 +25,15 @@
     background-color: rgba(34, 21, 51, 0.8);
 }
 
-.search-bar{
-  display: flex;
-  flex-direction: column;
-}
 
 a {
   color: rgb(255, 28, 122);
   text-decoration: none;
+  border-top: 1px solid rgb(255, 28, 122);
+  border-bottom: 1px solid rgb(255, 28, 122);
+  padding: 5px;
+  width: 100%;
+  text-align: left;
 }
 
 .links {
@@ -46,14 +47,14 @@ a {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
   padding: 1em;
   cursor: pointer;
 }
 
 .burger-bar {
-  width: 4em;
-  height: 0.5em;
+  margin: 3px;
+  width: 3em;
+  height: 0.4em;
   background-color: rgb(255, 28, 122);
   border-radius: 0.5em;
 }
@@ -66,6 +67,7 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: flex-start;
 }
 
 /* --------- Sliding Menu ---------- */
@@ -98,6 +100,7 @@ a {
 .search-bar {
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: flex-end;
 }
 
