--- a/final-project/src/components/styles/Content-Window.css
+++ b/final-project/src/components/styles/Content-Window.css
@@ -1,7 +1,10 @@
 
 .content-body {
     margin-bottom: 10px;
-    border: 1px solid rgb(80, 190, 233);
+    border-bottom: 1px solid rgb(80, 190, 233);
+    border-right: 1px solid rgb(80, 190, 233);
+    border-top: 1px solid rgb(255, 28, 122);
+    border-left: 1px solid rgb(255, 28, 122);
     border-radius: 10px;
     padding: 20px;
     margin: 10px;
