--- a/final-project/src/components/styles/Content-Window.css
+++ b/final-project/src/components/styles/Content-Window.css
@@ -1,13 +1,62 @@
 
-.content-body {
-    margin-bottom: 10px;
-    border: 1px solid rgb(80, 190, 233);
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10px;
-    background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
+
+
+/* This is for mobile */
+@media screen and (max-width: 700px) {
+    .content-body {
+        margin-bottom: 10px;
+        border: 1px solid rgb(80, 190, 233);
+        border-radius: 10px;
+        padding: 20px;
+        margin: 10px;
+        background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
+        min-width: 550px;
+        max-width: 550px;
+        height: 100%;
+    }
+
+    /* .product-title{
+        word-wrap: break-word;
+    } */
+    
 }
 
+/* This is for Desktop */
+@media screen and (min-width: 701px) {
+
+    .content-body {
+        margin-bottom: 10px;
+        border: 1px solid rgb(80, 190, 233);
+        border-radius: 10px;
+        padding: 20px;
+        margin: 10px;
+        background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
+        min-width: 550px;
+        max-width: 550px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+    }
+
+    .main-content {
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        align-content: center;
+        width: 100%;
+        grid-template-columns: repeat(4, 2fr);
+    }
+    
+    .product-title {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        text-wrap-mode:wrap;
+    }
+
+}
 
 
 
