--- a/final-project/src/components/styles/Home.css
+++ b/final-project/src/components/styles/Home.css
@@ -11,3 +11,12 @@
   }
 }
 
+.main-content {
+  /* border: 1px solid hsl(16, 100%, 50%); */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  height: auto;
+  
+}
