--- a/final-project/src/components/styles/Content-Window.css
+++ b/final-project/src/components/styles/Content-Window.css
@@ -1,7 +1,6 @@
 
 
 
-
 /* This is for mobile */
 @media screen and (max-width: 700px) {
     .content-body {
@@ -13,7 +12,7 @@
         background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
         min-width: 550px;
         max-width: 550px;
-        height: 100%;
+        height: auto;
     }
 
     /* .product-title{
@@ -21,22 +20,25 @@
     } */
     
 
-.content-body {
-    margin-bottom: 10px;
-    border-bottom: 1px solid rgb(80, 190, 233);
-    border-right: 1px solid rgb(80, 190, 233);
-    border-top: 1px solid rgb(255, 28, 122);
-    border-left: 1px solid rgb(255, 28, 122);
-    border-radius: 10px;
-    padding: 20px;
-    margin: 10px;
-    background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
+    .content-body {
+        height: auto;
+        margin-bottom: 10px;
+        border-bottom: 1px solid rgb(80, 190, 233);
+        border-right: 1px solid rgb(80, 190, 233);
+        border-top: 1px solid rgb(255, 28, 122);
+        border-left: 1px solid rgb(255, 28, 122);
+        border-radius: 10px;
+        padding: 20px;
+        margin: 10px;
+        background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
+    }
 }
 
 /* This is for Desktop */
 @media screen and (min-width: 701px) {
 
     .content-body {
+        max-height: 100%;
         margin-bottom: 10px;
         border: 1px solid rgb(80, 190, 233);
         border-radius: 10px;
@@ -48,7 +50,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 100%;
+        height: auto;
     }
 
     .main-content {
@@ -69,6 +71,8 @@
     }
 
 }
+
+
 
 
 
