--- a/final-project/src/components/styles/Content-Window.css
+++ b/final-project/src/components/styles/Content-Window.css
@@ -13,6 +13,7 @@
     border-top: 2px solid rgb(80, 190, 233);
     border-left: 2px solid rgb(80, 190, 233);
     transition: ease-out 0.3s;
+    margin-left: 6px;
 }
 
 
@@ -25,7 +26,6 @@
         padding: 20px;
         margin: 10px;
         background: linear-gradient(135deg, rgb(80, 190, 233), rgb(255, 28, 122));
-        min-width: 550px;
         max-width: 550px;
         height: auto;
     }
