--- a/final-project/src/components/styles/addToCart.css
+++ b/final-project/src/components/styles/addToCart.css
@@ -2,5 +2,20 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    
+}
+
+.product-display li {
+    list-style: none;
+}
+
+.cheese {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.cheese p {
+    font-size: 2.5rem;
+    padding: 5px;
 }
